2005-02-03:
    * Started initial repackaging of v2.7 in preparation for auto'ifying
      the build process.