@@ -105,10 +105,18 @@ PWOpen(prefix, mode)
 
 	if (pdesc.flags & PFOR_USEHWMS)
 	{
+            int i;
+
 	    if (fread(pdesc.hwms, 1, sizeof(pdesc.hwms), wfp) != sizeof(pdesc.hwms))
 	    {
 		pdesc.flags &= ~PFOR_USEHWMS;
 	    }
+#if 0
+            for (i=1; i<=0xff; i++)
+            {
+                printf("hwm[%02x] = %d\n", i, pdesc.hwms[i]);
+            }
+#endif
 	}
     }
 
@@ -151,7 +159,7 @@ PWClose(pwp)
 	    	{
 	    	    pwp->hwms[i] = pwp->hwms[i-1];
 	    	}
-#ifdef DEBUG
+#if 0
 	    	printf("hwm[%02x] = %d\n", i, pwp->hwms[i]);
 #endif
 	    }
@@ -249,11 +257,11 @@ GetPW(pwp, number)
 
     if (prevblock == thisblock)
     {
+#if 0
+	fprintf(stderr, "returning (%s)\n", data[number % NUMWORDS]);
+#endif
 	return (data[number % NUMWORDS]);
     }
-
-fprintf(stderr, "seek to %d for block %d lookup number %d\n", sizeof(struct pi_header) + (thisblock * sizeof(int32)), 
-	thisblock, number);
 
     if (fseek(pwp->ifp, sizeof(struct pi_header) + (thisblock * sizeof(int32)), 0))
     {
@@ -312,46 +320,80 @@ FindPW(pwp, string)
     register char *this;
     int idx;
 
+#if 0
+fprintf(stderr, "look for (%s)\n", string);
+#endif
+
     if (pwp->flags & PFOR_USEHWMS)
     {
 	idx = string[0] & 0xff;
     	lwm = idx ? pwp->hwms[idx - 1] : 0;
     	hwm = pwp->hwms[idx];
+
+#if 0
+	fprintf(stderr, "idx = %d\n", idx);
+	fprintf(stderr, "lwm = %d,  hwm = %d\n", lwm, hwm);
+#endif
     } else
     {
     	lwm = 0;
     	hwm = PW_WORDS(pwp) - 1;
     }
 
-#ifdef DEBUG
-    printf("---- %lu, %lu ----\n", lwm, hwm);
+    /* if the high water mark is lower than the low water mark, something is screwed up */
+    if ( hwm < lwm )
+    {
+	lwm = 0;
+	hwm = PW_WORDS(pwp) - 1;
+    }
+
+#if 0
+    fprintf(stderr, "---- %lu, %lu ----\n", lwm, hwm);
 #endif
 
     for (;;)
     {
 	int cmp;
 
-#ifdef DEBUG
-	printf("%lu, %lu\n", lwm, hwm);
-#endif
-
 	middle = lwm + ((hwm - lwm + 1) / 2);
+
+#if 0
+	fprintf(stderr, "lwm = %lu,  middle = %lu,  hwm = %lu\n", lwm, middle, hwm);
+#endif
 
 	if (middle == hwm)
 	{
+#if 0
+	    fprintf(stderr, "at terminal subdivision, breaking loop\n");
+#endif
 	    break;
 	}
 
 	this = GetPW(pwp, middle);
-	cmp = strcmp(string, this);		/* INLINE ? */
+	if ( ! this )
+	{
+#if 0
+		fprintf(stderr, "getpw returned null, returning null in FindPW\n");
+#endif
+		return(PW_WORDS(pwp));
+	}
+	else
+	{
+#if 0
+		fprintf(stderr, "comparing %s against found %s\n", string, this);
+#endif
+	}
 
+	cmp = strcmp(string, this);
 	if (cmp < 0)
 	{
 	    hwm = middle;
-	} else if (cmp > 0)
+	} 
+	else if (cmp > 0)
 	{
 	    lwm = middle;
-	} else
+	} 
+	else
 	{
 	    return (middle);
 	}
