@@ -1,3 +1,9 @@
+2005-02-04:
+    * Corrected problems with invalid binary search behavior and resulting segfaults due to index read failures
+    * Changed index build to include symbols and other non-alpha characters
+
 2005-02-03:
     * Started initial repackaging of v2.7 in preparation for auto'ifying
       the build process.
+
+
